--- a/admin/config.yml
+++ b/admin/config.yml
@@ -22,6 +22,21 @@ collections:
       - { label: "Meta Description", name: "metaDescription", widget: "text", required: false }
       - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
       - { label: "Body", name: "body", widget: "markdown" }
+  
+    # Our projects
+  - name: "project" # Used in routes, e.g., /admin/collections/blog
+    label: "Project" # Used in the UI
+    folder: "projects" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - { label: "Title", name: "title", widget: "string" }
+      # - { label: "Publish Date", name: "date", widget: "datetime" }
+      # - { label: "Author", name: "author", widget: "string", default: "Anonymous" }
+      - { label: "Summary", name: "summary", widget: "text" }
+      - { label: "Meta Description", name: "metaDescription", widget: "text", required: false }
+      - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
+      - { label: "Body", name: "body", widget: "markdown" }
 
   # Our basic pages e.g. About
   - name: "pages"
@@ -53,5 +68,6 @@ collections:
         fields:
           - {label: Title, name: title, widget: string}
           - {label: Subtitle, name: subtitle, widget: string, required: false}
+          - {label: Body, name: body, widget: string, required: false}
           - { label: Image, name: image, widget: image, required: false }
           - { label: Image Alt Text, name: image_alt, widget: string, required: false }
