--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,5 +1,8 @@
 backend:
   name: git-gateway
+
+  local_backend: true  
+
   branch: master # Branch to update (optional; defaults to master)
 
 # Uncomment below to enable drafts
@@ -68,6 +71,6 @@ collections:
         fields:
           - {label: Title, name: title, widget: string}
           - {label: Subtitle, name: subtitle, widget: string, required: false}
-          - {label: Body, name: body, widget: string, required: false}
+          - {label: Body, name: body, widget: markdown, required: false}
           - { label: Image, name: image, widget: image, required: false }
           - { label: Image Alt Text, name: image_alt, widget: string, required: false }
